--- a/apps/react-shell/package.json
+++ b/apps/react-shell/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
-    "start": "webpack serve --hot --mode development"
+    "start": "webpack serve --hot --mode development",
+    "start:prod": "webpack serve --mode production"
   },
   "author": "",
   "license": "ISC",
