--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    - name: Qodana Scan
+      uses: JetBrains/qodana-action@v5.0.2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
