--- a/apps/solid-mfe/package.json
+++ b/apps/solid-mfe/package.json
@@ -13,34 +13,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "solid-app-router": "^0.3.0",
-    "solid-js": "^1.2.6"
+    "solid-app-router": "0.4.2",
+    "solid-js": "1.5.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/runtime": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
-    "babel-loader": "^8.2.3",
-    "babel-preset-solid": "^1.2.6",
-    "css-loader": "^6.5.1",
-    "postcss": "^8.4.5",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.19.0",
+    "babel-loader": "^8.2.5",
+    "babel-preset-solid": "^1.5.5",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.5.3",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^12.4.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.3",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "stylus": "^0.56.0",
-    "stylus-loader": "^6.2.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1"
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.0.0",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
