--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Qodana Scan
-      uses: JetBrains/qodana-action@v5.0.2
+      uses: JetBrains/qodana-action@main
+      env:
+        QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
